--- a/asimosi-bot/Dockerfile
+++ b/asimosi-bot/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:10-alpine
 WORKDIR /app
-COPY . .
+COPY ./asimosi-bot .
 RUN npm install
 RUN npm run build
 ENV TZ="America/Argentina/Buenos_Aires"
